--- a/Fashionel/main.css
+++ b/Fashionel/main.css
@@ -31,7 +31,7 @@ a:hover {
 header {
   display: flex;
   justify-content: space-between;
-  background-color: #8d99ae;
+  background-color: #ef233c;
   padding: 10px 25px;
   align-items: center;
 }
@@ -83,7 +83,7 @@ main .hero-shot .about-us {
 }
 main .hero-shot .about-us .about-us-btn {
   padding: 5px 15px;
-  background-color: #d90429;
+  background-color: #fff;
   color: #2b2d42;
   border: 1px solid #2b2d42;
   transition: color 0.5s ease-in-out;
